add returning books, checking out multiple books

--- a/app/App.css
+++ b/app/App.css
@@ -36,6 +36,11 @@
 	margin-left: 40px;
 }
 
+.pvm {
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+
 .bap {
   background-color: red;
   height: 25px;
